Added synced sign in badge

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="collection.html" class="collection-link">View Collection</a>
                 <button class="settings-btn" id="settingsBtn" title="Settings">⚙️</button>
             </div>
+            <div class="sync-badge sync-unknown" id="syncBadge">Sync: Checking...</div>
         </header>
 
         <main>
