Cleaned up habit references and other changes

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="theme-color" content="#fd79a8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>Habit Jar - Marble Count</title>
+    <title>Marble Jar - Marble Count</title>
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
-    <link rel="stylesheet" href="styles.css?v=18">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="app-container">
         <header>
-            <h1>Habit Jar</h1>
-            <p class="subtitle">Fill your jar, one habit at a time</p>
+            <h1>Marble Jar</h1>
+            <p class="subtitle">Tap the lid to add a marble</p>
             <div class="header-actions">
                 <a href="collection.html" class="collection-link">View Collection</a>
                 <button class="settings-btn" id="settingsBtn" title="Settings">⚙️</button>
@@ -40,21 +40,7 @@
                 <div class="jar-stats">
                     <span id="marbleCount">0</span> marbles collected
                 </div>
-                <button class="add-pending-btn" id="addPendingBtn">
-                    <span class="pending-icon">💤</span> Complete habits to earn marbles
-                </button>
             </div>
-
-            <div class="habits-section">
-                <div class="section-header">
-                    <h2>Habit</h2>
-                    <button class="add-habit-btn" id="addHabitBtn">+ Add Habit</button>
-                </div>
-                <div class="habits-list" id="habitsList">
-                    <!-- Habits will be dynamically inserted -->
-                </div>
-            </div>
-
         </main>
 
         <!-- Settings Page -->
@@ -111,35 +97,17 @@
             </div>
         </div>
 
-        <!-- Add Habit Modal -->
-        <div class="modal-overlay" id="modalOverlay">
-            <div class="modal">
-                <h3>Add New Habit</h3>
-                <input type="text" id="habitInput" placeholder="Enter habit name..." maxlength="50">
-                <div class="times-input-row">
-                    <label for="habitTimesInput">Times per day:</label>
-                    <div class="times-stepper">
-                        <button type="button" class="stepper-btn" onclick="decrementTimes()">−</button>
-                        <input type="number" id="habitTimesInput" value="1" min="1" max="99">
-                        <button type="button" class="stepper-btn" onclick="incrementTimes()">+</button>
-                    </div>
-                </div>
-                <div class="modal-buttons">
-                    <button class="modal-cancel" id="modalCancel">Cancel</button>
-                    <button class="modal-confirm" id="modalConfirm">Add Habit</button>
-                </div>
-            </div>
-        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="livereload.js"></script>
     <script src="utils.js"></script>
-    <script src="collectibles-data.js?v=5"></script>
-    <script src="sync-config.js?v=1"></script>
-    <script src="sync.js?v=1"></script>
-    <script src="app.js?v=26"></script>
+    <script src="collectibles-data.js"></script>
+    <script src="sync-config.js"></script>
+    <script src="sync.js"></script>
+    <script src="app.js"></script>
+    <script src="version.js"></script>
     <script src="pwa-register.js"></script>
 </body>
 </html>
