--- a/collection.html
+++ b/collection.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#fd79a8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>Collection - Habit Jar</title>
+    <title>Collection - Marble Jar</title>
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" href="icons/icon-192.png">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="collection.css?v=2">
+    <link rel="stylesheet" href="collection.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -56,6 +56,7 @@
     <script src="livereload.js"></script>
     <script src="collectibles-data.js"></script>
     <script src="collection.js"></script>
+    <script src="version.js"></script>
     <script src="pwa-register.js"></script>
 </body>
 <footer>
