Fixed some item sticking floating issues, changed color theme to teal

--- a/collection.html
+++ b/collection.html
@@ -18,7 +18,7 @@
         <header>
             <a href="index.html" class="back-link">← Back to Jar</a>
             <h1>Collection</h1>
-            <p class="subtitle">All the cute things you can collect!</p>
+            <p class="subtitle">Items collected so far</p>
         </header>
 
         <main>
