Changed checkbox orientation for settings to be on top of item

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <div class="settings-content">
                 <div class="settings-group">
                     <h3>Choose Your Collectible</h3>
+                    <div class="collectible-bulk-actions">
+                        <button type="button" class="collectible-bulk-btn" id="selectAllCollectiblesBtn">Select All</button>
+                        <button type="button" class="collectible-bulk-btn secondary" id="deselectAllCollectiblesBtn">Deselect All</button>
+                    </div>
                     <div class="collectible-picker" id="collectiblePicker">
                         <!-- Collectibles will be dynamically rendered -->
                     </div>
