Changed settings exit be a button instead

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <svg class="jar-fill-full" viewBox="0 0 304 390" preserveAspectRatio="none" aria-hidden="true">
                             <path d="M88 40 L88 78 L52 124 L44 132 L44 330 Q44 370 84 370 L220 370 Q260 370 260 330 L260 132 L252 124 L216 78 L216 40 Z"></path>
                         </svg>
+                        <div class="jar-shine" aria-hidden="true"></div>
                         <svg class="jar-outline-full" viewBox="0 0 304 390" preserveAspectRatio="none" aria-hidden="true">
                             <path d="M88 40 L88 78 L52 124 L44 132 L44 330 Q44 370 84 370 L220 370 Q260 370 260 330 L260 132 L252 124 L216 78 L216 40"></path>
                         </svg>
@@ -62,6 +63,7 @@
         <!-- Settings Page -->
         <div class="settings-page" id="settingsPage">
             <div class="settings-content">
+                <button type="button" class="settings-close-btn" id="settingsCloseBtn" aria-label="Close settings">×</button>
                 <h2 class="settings-title">Settings</h2>
                 <div class="settings-group">
                     <h3>Choose Your Collectible</h3>
